--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  background: url("/static/background.png");
+
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #373b64;
+  height: 100%;
 }
 
 a {
@@ -13,4 +21,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --text-purple: rgba(67, 56, 202, 1);
+  --text-purple-dark: rgba(79, 70, 229, 1);
+  --text-black: rgba(17, 24, 39, 1);
+  --text-white-100: rgba(229, 231, 235, 1);
 }
