--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,11 @@
   padding-left: 1rem /* 16px */;
   padding-right: 1rem /* 16px */;
 }
+.heroImage {
+  position: absolute;
+  top: 0px;
+  z-index: 1;
+}
 
 /** Breakpoints:
   sm: min-width: 640px;
@@ -43,6 +48,9 @@
   .main {
     margin-top: 4rem /* 64px */;
   }
+  .heroImage {
+    right: 20%;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -54,5 +62,8 @@
     margin-top: 5rem /* 80px */;
     padding-left: 2rem /* 32px */;
     padding-right: 2rem /* 32px */;
+  }
+  .heroImage {
+    right: 20%;
   }
 }
