--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,16 @@
   top: 0px;
   z-index: 1;
 }
+.cardLayout {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem /* 24px */;
+  row-gap: 1.5rem /* 24px */;
+}
+
+.card {
+  justify-content: center;
+}
 
 /** Breakpoints:
   sm: min-width: 640px;
@@ -37,6 +47,9 @@
     padding-left: 1.5rem /* 24px */;
     padding-right: 1.5rem /* 24px */;
   }
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px) {
@@ -50,6 +63,9 @@
   }
   .heroImage {
     right: 20%;
+  }
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -65,5 +81,13 @@
   }
   .heroImage {
     right: 20%;
+  }
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+@media (min-width: 1280px) {
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
